editor background and alignment issue resolved

--- a/packages/ui-kit/src/components/editors/monaco-v2/sass/Editor.sass
+++ b/packages/ui-kit/src/components/editors/monaco-v2/sass/Editor.sass
@@ -6,3 +6,9 @@
   left: 66px
   letter-spacing: 0.2px
   font-family: inherit
+
+.monaco-editor, .monaco-editor-background, .monaco-editor .inputarea.ime-input
+   background-color: transparent !important
+
+.monaco-editor .margin
+  background-color: var(--focus-level-2) !important     
